# Apollo

./: README.md
nsight/: Apollo.F1.nsight-cuproj
src/: docker-compose.yml
src/cloud/: Apollo.sln
src/engine/: Apollo.F1.sln
src/engine/Apollo.F1.Compute/: Apollo.F1.Compute.csproj
src/engine/Apollo.F1.Compute.Cuda.Native/: CMakeLists.txt
src/engine/Apollo.F1.Compute.Cuda.Native/src/: memory.cu  multiplication.cu  pointwise_operations.cu  pointwise_operations.cuh  sum.cu  sum.cuh  transformations.cu  transformations.cuh  transpose.cu
src/engine/Apollo.F1.Compute.Cuda/Buffers/: GlobalMemory.cs  GlobalMemoryAllocator.cs  GpuBuffer.cs  GpuBufferPool.cs
src/engine/Apollo.F1.Compute.Cuda/Common/: Dll.cs  IKernel.cs  KernelEntryPointAttribute.cs  KernelOptionsBase.cs
src/engine/Apollo.F1.Compute.Cuda/Exceptions/: CudaExceptionBase.cs  CudaInitializationException.cs  CudaInvalidDeviceException.cs  CudaInvalidDeviceFunctionException.cs  CudaInvalidFilterSettingException.cs  CudaInvalidNormSettingException.cs  CudaInvalidPitchValueException.cs  CudaInvalidResourceHandleException.cs  CudaInvalidValueException.cs  CudaJitCompilationDisabledException.cs  CudaJitCompilerNotFoundException.cs  CudaLaunchOutOfResourcesException.cs  CudaMissingConfigurationException.cs  CudaNoKernelImageForDeviceException.cs  CudaUnmapBufferObjectFailedException.cs
src/engine/Apollo.F1.Core/: Class1.cs
src/engine/Apollo.F1.Math/: Matrix.cs  Vector.cs
src/engine/Apollo.F1.Math.Cuda/: Apollo.F1.Math.Cuda.csproj  Dll.cs  GpuMatrixOperations.cs
src/engine/Apollo.F1.Math.Cuda.Native/: CMakeLists.txt
src/engine/Apollo.F1.Math.Cuda.Native/scripts/: CopyOutputDll.ps1
src/engine/Apollo.F1.Math.Cuda.Native/src/: core.cuh  functions_operations.cu  functions_operations.cuh  memory.cu  memory.cuh  multiplication.cu  multiplication.cuh  pointwise_operations.cu  pointwise_operations.cuh  scalar.cu  scalar.cuh  sum.cu  sum.cuh  transformations.cu  transformations.cuh  transpose.cu  transpose.cuh
src/engine/Apollo.F1.Service/: Apollo.F1.Service.csproj  Program.cs  Worker.cs
src/ui/portal/: package-lock.json  package.json
(+255 files in other folders)
